Added Ui For Front Page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- oncontextmenu="return false"  -->
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio-Home</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="As a creative graphic designer this my portfolio My name is ali raza 
+    and this website is developed by umair ali bhutto" />
+    <meta name="keywords" content="ali raza portfolio, made by umair">
+    <meta name="author" content="Umair Ali Bhutto">
+
+    <link rel="icon" href="assets/images/logo/favicon.png">
+    <!-- <link rel="icon" href="assets/images/logo/favicon_dark.ico" media="(prefers-color-scheme: light)" />
+    <link rel="icon" href="assets/images/logo/favicon_light.ico" media="(prefers-color-scheme: dark)" /> -->
+    <link rel="stylesheet" href="styles.css" />
+
 </head>
-<body>
-    <h1>Test</h1>
-    <a href="RotateClockCssOnly/index.html">Clock</a>
+
+<body>  
+    <!-- Routes To CodePens -->
+    <section class="m-4">
+        <div class="container-fluid">
+            <div data-wow-duration="2s" data-wow-delay="0s" class="wow bounceInUp">
+                <div class="row">
+
+                    <div class="col-md-3 col-sm-12 col-lg-3">
+                        <div data-tilt class="card-wrapper text-center">
+                            <a class="card-route" target="_blank" href="RotateClockCssOnly/index.html">
+                                <img class="card-image" width="35%" height="35%"
+                                    src="logo.png" alt="logo" />
+                                <h4 class="card-text">Rotate Clock CSS Only</h4>
+                                <div class="text-center m-2" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="More Details"
+                                        href="RotateClockCssOnly/index.html">More Details</a>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+    <script src="assets/js/animation.js"></script>
+    <script src="assets/js/jquery-1.12.4.min.js"></script>
+    <script src="assets/js/tilt.jquery.js"></script>
+
+
 </body>
+<!-- Website Made by Umair Ali Bhutto -->
+
+
 </html>
