--- a/index.html
+++ b/index.html
@@ -2,19 +2,13 @@
 <html lang="en">
 <!-- oncontextmenu="return false"  -->
 <head>
-    <title>Portfolio-Home</title>
+    <title>Code Pens</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="As a creative graphic designer this my portfolio My name is ali raza 
-    and this website is developed by umair ali bhutto" />
-    <meta name="keywords" content="ali raza portfolio, made by umair">
+    <meta name="description" content="This website is developed by Umair Ali Bhutto" />
     <meta name="author" content="Umair Ali Bhutto">
-
-    <link rel="icon" href="assets/images/logo/favicon.png">
-    <!-- <link rel="icon" href="assets/images/logo/favicon_dark.ico" media="(prefers-color-scheme: light)" />
-    <link rel="icon" href="assets/images/logo/favicon_light.ico" media="(prefers-color-scheme: dark)" /> -->
+    <link rel="icon" href="logo.png">
     <link rel="stylesheet" href="styles.css" />
-
 </head>
 
 <body>  
@@ -43,15 +37,6 @@
             </div>
         </div>
     </section>
-
-
-
-
-
-
-
-
-
 
 
 
