--- a/index.html
+++ b/index.html
@@ -15,23 +15,47 @@
     <!-- Routes To CodePens -->
     <section class="m-4">
         <div class="container-fluid">
-            <div data-wow-duration="2s" data-wow-delay="0s" class="wow bounceInUp">
+            <div data-wow-duration="1.5s" data-wow-delay="0.5s" class="wow bounceInUp">
                 <div class="row">
 
                     <div class="col-md-3 col-sm-12 col-lg-3">
                         <div data-tilt class="card-wrapper text-center">
-                            <a class="card-route" target="_blank" href="RotateClockCssOnly/index.html">
+                            <a class="card-route" target="_blank" href="pens/RotateClockCssOnly/index.html">
                                 <img class="card-image" width="35%" height="35%"
                                     src="logo.png" alt="logo" />
                                 <h4 class="card-text">Rotate Clock CSS Only</h4>
-                                <div class="text-center m-2" data-tilt>
-                                    <a class="inner-route" target="_blank" aria-label="More Details"
-                                        href="RotateClockCssOnly/index.html">More Details</a>
+                                <div class="text-center mt-3" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Demo"
+                                        href="pens/RotateClockCssOnly/index.html">Demo</a>
+                                </div>
+                                <div class="text-center mt-3 mb-3" data-tilt>
+                                    <a class="inner-route2" target="_blank" aria-label="Created By"
+                                        href="https://codepen.io/DawidKrajewski">Visit Creator</a>
                                 </div>
                             </a>
                         </div>
                     </div>
 
+
+                    <div class="col-md-3 col-sm-12 col-lg-3">
+                        <div data-tilt class="card-wrapper text-center">
+                            <a class="card-route" target="_blank" href="pens/RotateClockCssOnly/index.html">
+                                <img class="card-image" width="35%" height="35%"
+                                    src="logo.png" alt="logo" />
+                                <h4 class="card-text">3D Object Logo</h4>
+                                <div class="text-center mt-3" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Demo"
+                                        href="pens/3dObject/index.html">Demo</a>
+                                </div>
+                                <div class="text-center mt-3 mb-3" data-tilt>
+                                    <a class="inner-route2" target="_blank" aria-label="Created By"
+                                        href="https://codepen.io/rabinlc">Visit Creator</a>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    
 
                 </div>
             </div>
