--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <div data-tilt class="card-wrapper text-center">
                             <a class="card-route" target="_blank" href="pens/CssBallSwitch/index.html">
                                 <img class="card-image" width="35%" height="35%" src="logo.png" alt="logo" />
-                                <h4 class="card-text">3D Object Logo</h4>
+                                <h4 class="card-text">Toggle Switch</h4>
                                 <div class="text-center mt-3" data-tilt>
                                     <a class="inner-route" target="_blank" aria-label="Demo"
                                         href="pens/CssBallSwitch/index.html">Demo</a>
