Added Font Perspective CodePen

--- a/pens/RotateClockCssOnly/index.html
+++ b/pens/RotateClockCssOnly/index.html
@@ -22,7 +22,10 @@
       </div>
 
 
-
+      <!-- <span style="--order:1">1
+        <label class="back" for="face4"><</label>
+        <label class="next" for="face2">></label>
+        </span> -->
 
 </body>
 
