--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
                         </div>
                     </div>
 
-
                     <div class="col-md-3 col-sm-12 col-lg-3">
                         <div data-tilt class="card-wrapper text-center">
                             <a class="card-route" target="_blank" href="pens/3dCube/index.html">
@@ -107,7 +106,6 @@
                             </a>
                         </div>
                     </div>
-
 
                     <div class="col-md-3 col-sm-12 col-lg-3">
                         <div data-tilt class="card-wrapper text-center">
@@ -127,8 +125,6 @@
                     </div>
 
 
-
-
                     <div class="col-md-3 col-sm-12 col-lg-3">
                         <div data-tilt class="card-wrapper text-center">
                             <a class="card-route" target="_blank" href="pens/Css3dCubes/index.html">
@@ -145,7 +141,6 @@
                             </a>
                         </div>
                     </div>
-
 
                     <div class="col-md-3 col-sm-12 col-lg-3">
                         <div data-tilt class="card-wrapper text-center">
@@ -165,8 +160,6 @@
                     </div>
 
 
-
-
                     <div class="col-md-3 col-sm-12 col-lg-3">
                         <div data-tilt class="card-wrapper text-center">
                             <a class="card-route" target="_blank" href="pens/CardOpening/index.html">
@@ -183,6 +176,47 @@
                             </a>
                         </div>
                     </div>
+
+                    <div class="col-md-3 col-sm-12 col-lg-3">
+                        <div data-tilt class="card-wrapper text-center">
+                            <a class="card-route" target="_blank" href="pens/PureCssSlider/index.html">
+                                <img class="card-image" width="35%" height="35%" src="logo.png" alt="logo" />
+                                <h4 class="card-text">Pure Css Slider</h4>
+                                <div class="text-center mt-3" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Demo"
+                                        href="pens/PureCssSlider/index.html">Demo</a>
+                                </div>
+                                <div class="text-center mt-3 mb-3" data-tilt>
+                                    <a class="inner-route2" target="_blank" aria-label="Created By"
+                                        href="https://codepen.io/dobro123-the-vuer">Visit Creator</a>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-3 col-sm-12 col-lg-3">
+                        <div data-tilt class="card-wrapper text-center">
+                            <a class="card-route" target="_blank" href="pens/FontPerspective/index.html">
+                                <img class="card-image" width="35%" height="35%" src="logo.png" alt="logo" />
+                                <h4 class="card-text">Font Perspective</h4>
+                                <div class="text-center mt-3" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Demo"
+                                        href="pens/FontPerspective/index.html">Demo</a>
+                                </div>
+                                <div class="text-center mt-3 mb-3" data-tilt>
+                                    <a class="inner-route2" target="_blank" aria-label="Created By"
+                                        href="https://codepen.io/petebarr">Visit Creator</a>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+
+
+
+
+
+
 
 
                     
