added button hover, color change text, css toggle

--- a/index.html
+++ b/index.html
@@ -248,12 +248,73 @@
                     </div>
 
 
+                    <div class="col-md-3 col-sm-12 col-lg-3">
+                        <div data-tilt class="card-wrapper text-center">
+                            <a class="card-route" target="_blank" href="pens/ColorChangingText/index.html">
+                                <img class="card-image" width="35%" height="35%" src="logo.png" alt="logo" />
+                                <h4 class="card-text">Color Changing Text</h4>
+                                <div class="text-center mt-3" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Demo"
+                                        href="pens/ColorChangingText/index.html">Demo</a>
+                                </div>
+                                <div class="text-center mt-3 mb-3" data-tilt>
+                                    <a class="inner-route2" target="_blank" aria-label="Created By"
+                                        href="https://codepen.io/Codepixl">Visit Creator</a>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-3 col-sm-12 col-lg-3">
+                        <div data-tilt class="card-wrapper text-center">
+                            <a class="card-route" target="_blank" href="pens/ButtonHover/index.html">
+                                <img class="card-image" width="35%" height="35%" src="logo.png" alt="logo" />
+                                <h4 class="card-text">Button Hover Effect</h4>
+                                <div class="text-center mt-3" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Demo"
+                                        href="pens/ButtonHover/index.html">Demo</a>
+                                </div>
+                                <div class="text-center mt-3 mb-3" data-tilt>
+                                    <a class="inner-route2" target="_blank" aria-label="Created By"
+                                        href="https://codepen.io/cassidoo">Visit Creator</a>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-3 col-sm-12 col-lg-3">
+                        <div data-tilt class="card-wrapper text-center">
+                            <a class="card-route" target="_blank" href="pens/PureCssToggleButtons/index.html">
+                                <img class="card-image" width="35%" height="35%" src="logo.png" alt="logo" />
+                                <h4 class="card-text">Pure Css Toggle Buttons</h4>
+                                <div class="text-center mt-3" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Demo"
+                                        href="pens/PureCssToggleButtons/index.html">Demo</a>
+                                </div>
+                                <div class="text-center mt-3 mb-3" data-tilt>
+                                    <a class="inner-route2" target="_blank" aria-label="Created By"
+                                        href="https://codepen.io/mallendeo">Visit Creator</a>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
 
 
 
 
 
-                    
+
+
+
+
+
+
+
+
+
+
+
 
                 </div>
             </div>
