--- a/pens/PureCssToggleButtons/index.html
+++ b/pens/PureCssToggleButtons/index.html
@@ -3,41 +3,206 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pure css toggles</title>
+    <title>Pure Css Toggles Buttons</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
-
 <body>
- 
-<h2>Toggle 'em</h2>
-<ul class="tg-list">
-  <li class="tg-list-item">
-    <h4>Light</h4>
-    <input class="tgl tgl-light" id="cb1" type="checkbox"/>
-    <label class="tgl-btn" for="cb1"></label>
-  </li>
-  <li class="tg-list-item">
-    <h4>iOS</h4>
-    <input class="tgl tgl-ios" id="cb2" type="checkbox"/>
-    <label class="tgl-btn" for="cb2"></label>
-  </li>
-  <li class="tg-list-item">
-    <h4>Skewed</h4>
-    <input class="tgl tgl-skewed" id="cb3" type="checkbox"/>
-    <label class="tgl-btn" data-tg-off="OFF" data-tg-on="ON" for="cb3"></label>
-  </li>
-  <li class="tg-list-item">
-    <h4>Flat</h4>
-    <input class="tgl tgl-flat" id="cb4" type="checkbox"/>
-    <label class="tgl-btn" for="cb4"></label>
-  </li>
-  <li class="tg-list-item">
-    <h4>Flip</h4>
-    <input class="tgl tgl-flip" id="cb5" type="checkbox"/>
-    <label class="tgl-btn" data-tg-off="Nope" data-tg-on="Yeah!" for="cb5"></label>
-  </li>
-</ul>
+	<div id="app-cover">
+		<div class="row">
+		  <div class="toggle-button-cover">
+			<div class="button-cover">
+			  <div class="button r" id="button-1">
+				<input type="checkbox" class="checkbox" />
+				<div class="knobs"></div>
+				<div class="layer"></div>
+			  </div>
+			</div>
+		  </div>
+		  <div class="toggle-button-cover">
+			<div class="button-cover">
+			  <div class="button r" id="button-2">
+				<input type="checkbox" class="checkbox" />
+				<div class="knobs"></div>
+				<div class="layer"></div>
+			  </div>
+			</div>
+		  </div>
+		  <div class="toggle-button-cover">
+			<div class="button-cover">
+			  <div class="button r" id="button-3">
+				<input type="checkbox" class="checkbox" />
+				<div class="knobs"></div>
+				<div class="layer"></div>
+			  </div>
+			</div>
+		  </div>
+		</div>
+		<div class="row">
+		  <div class="toggle-button-cover">
+			<div class="button-cover">
+			  <div class="button r" id="button-4">
+				<input type="checkbox" class="checkbox" />
+				<div class="knobs"></div>
+				<div class="layer"></div>
+			  </div>
+			</div>
+		  </div>
+		  <div class="toggle-button-cover">
+			<div class="button-cover">
+			  <div class="button r" id="button-5">
+				<input type="checkbox" class="checkbox" />
+				<div class="knobs"><span></span></div>
+				<div class="layer"></div>
+			  </div>
+			</div>
+		  </div>
+		  <div class="toggle-button-cover">
+			<div class="button-cover">
+			  <div class="button r" id="button-6">
+				<input type="checkbox" class="checkbox" />
+				<div class="knobs"></div>
+				<div class="layer"></div>
+			  </div>
+			</div>
+		  </div>
+		</div>
+		<div class="row">
+		  <div class="toggle-button-cover">
+			<div class="button-cover">
+			  <div class="button r" id="button-7">
+				<input type="checkbox" class="checkbox" />
+				<div class="knobs">
+				  <span></span>
+				</div>
+				<div class="layer"></div>
+			  </div>
+			</div>
+		  </div>
+		  <div class="toggle-button-cover">
+			<div class="button-cover">
+			  <div class="button r" id="button-8">
+				<input type="checkbox" class="checkbox" />
+				<div class="knobs">
+				  <span></span>
+				</div>
+				<div class="layer"></div>
+			  </div>
+			</div>
+		  </div>
+		  <div class="toggle-button-cover">
+			<div class="button-cover">
+			  <div class="button r" id="button-9">
+				<input type="checkbox" class="checkbox" />
+				<div class="knobs">
+				  <span></span>
+				</div>
+				<div class="layer"></div>
+			  </div>
+			</div>
+		  </div>
+		</div>
+		<div class="row">
+		  <div class="toggle-button-cover">
+			<div class="button-cover">
+			  <div class="button b2" id="button-10">
+				<input type="checkbox" class="checkbox" />
+				<div class="knobs">
+				  <span>YES</span>
+				</div>
+				<div class="layer"></div>
+			  </div>
+			</div>
+		  </div>
+		  <div class="toggle-button-cover">
+			<div class="button-cover">
+			  <div class="button b2" id="button-11">
+				<input type="checkbox" class="checkbox" />
+				<div class="knobs">
+				  <span></span>
+				</div>
+				<div class="layer"></div>
+			  </div>
+			</div>
+		  </div>
+		  <div class="toggle-button-cover">
+			<div class="button-cover">
+			  <div class="button b2" id="button-12">
+				<input type="checkbox" class="checkbox" />
+				<div class="knobs">
+				  <span></span>
+				</div>
+				<div class="layer"></div>
+			  </div>
+			</div>
+		  </div>
+		</div>
+		<div class="row">
+		  <div class="toggle-button-cover">
+			<div class="button-cover">
+			  <div class="button b2" id="button-13">
+				<input type="checkbox" class="checkbox" />
+				<div class="knobs">
+				  <span></span>
+				</div>
+				<div class="layer"></div>
+			  </div>
+			</div>
+		  </div>
+		  <div class="toggle-button-cover">
+			<div class="button-cover">
+			  <div class="button b2" id="button-14">
+				<input type="checkbox" class="checkbox" />
+				<div class="knobs">
+				  <span></span>
+				</div>
+				<div class="layer"></div>
+			  </div>
+			</div>
+		  </div>
+		  <div class="toggle-button-cover">
+			<div class="button-cover">
+			  <div class="button b2" id="button-15">
+				<input type="checkbox" class="checkbox" />
+				<div class="knobs"></div>
+				<div class="layer"></div>
+			  </div>
+			</div>
+		  </div>
+		</div>
+		<div class="row">
+		  <div class="toggle-button-cover">
+			<div class="button-cover">
+			  <div class="button b2" id="button-16">
+				<input type="checkbox" class="checkbox" />
+				<div class="knobs"></div>
+				<div class="layer"></div>
+			  </div>
+			</div>
+		  </div>
+		  <div class="toggle-button-cover">
+			<div class="button-cover">
+			  <div class="button b2" id="button-17">
+				<input type="checkbox" class="checkbox" />
+				<div class="knobs">
+				  <span></span>
+				</div>
+				<div class="layer"></div>
+			  </div>
+			</div>
+		  </div>
+		  <div class="toggle-button-cover">
+			<div class="button-cover">
+			  <div class="button b2" id="button-18">
+				<input type="checkbox" class="checkbox" />
+				<div class="knobs">
+				  <span></span>
+				</div>
+				<div class="layer"></div>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	  </div>
+       
 </body>
-
 </html>
