converted css clock to js clock

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <div data-tilt class="card-wrapper text-center">
                             <a class="card-route" target="_blank" href="pens/RotateClockCssOnly/index.html">
                                 <img class="card-image" width="35%" height="35%" src="logo.png" alt="logo" />
-                                <h4 class="card-text">Rotate Clock CSS Only</h4>
+                                <h4 class="card-text">Rotate Clock CSS Only Now JS</h4>
                                 <div class="text-center mt-3" data-tilt>
                                     <a class="inner-route" target="_blank" aria-label="Demo"
                                         href="pens/RotateClockCssOnly/index.html">Demo</a>
