--- a/index.html
+++ b/index.html
@@ -511,6 +511,24 @@
                         </div>
                     </div>
 
+
+                    <div class="col-md-3 col-sm-12 col-lg-3">
+                        <div data-tilt class="card-wrapper text-center">
+                            <a class="card-route" target="_blank" href="pens/MatrixCodeRain/index.html">
+                                <img class="card-image" width="35%" height="35%" src="logo.png" alt="logo" />
+                                <h4 class="card-text">Matrix Code Rain</h4>
+                                <div class="text-center mt-3" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Demo"
+                                        href="pens/MatrixCodeRain/index.html">Demo</a>
+                                </div>
+                                <div class="text-center mt-3 mb-3" data-tilt>
+                                    <a class="inner-route2" target="_blank" aria-label="Created By"
+                                        href="https://codepen.io/neilcarpenter">Visit Creator</a>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
                     
 
 
