Video Works And John Images Reset

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <!-- OPENGRAPH -->
     <meta property="og:title" content="✨ Discover the Power of Pens! 🚀">
     <meta property="og:description"
-        content="🔥 Unleash the potential of CodePen. 🔥 Explore a collection of inspiring CodePens from talented creators! #CodePen 💻">
+        content="🔥 Unleash the potential of CodePen. Explore a collection of inspiring CodePens from talented creators! #CodePen 💻">
     <meta property="og:image" content="https://umair-ali-bhutto.github.io/assets/CodePenIcon/logo.png">
     <meta name="og:type" content="website" />
     <!-- TWITTER AND OTHER -->
     <meta name="twitter:title" content="✨ Discover the Power of Pens! 🚀">
     <meta name="twitter:description"
-        content="🔥 Unleash the potential of CodePen. 🔥 Explore a collection of inspiring CodePens from talented creators! #CodePen 💻">
+        content="🔥 Unleash the potential of CodePen. Explore a collection of inspiring CodePens from talented creators! #CodePen 💻">
     <meta name="twitter:image" content="https://umair-ali-bhutto.github.io/assets/CodePenIcon/logo.png">
 
     <meta name="keywords"
@@ -59,7 +59,7 @@
 
                     <!-- Trying videos -->
 
-                    <style>
+                    <!-- <style>
                         @keyframes falling {
                             0% {
                                 transform: translateY(0);
@@ -92,9 +92,9 @@
                             object-fit: cover;
                             transition: opacity 0.5s ease;
                         }
-                    </style>
+                    </style> -->
 
-                    <script>
+                    <!-- <script>
                         function startAnimation() {
                             const overlay = document.getElementById("overlay");
                             const video = document.getElementById("video");
@@ -109,9 +109,9 @@
                         }
 
 
-                    </script>
+                    </script> -->
 
-                    <div class="col-md-3 col-sm-12 col-lg-3">
+                    <!-- <div class="col-md-3 col-sm-12 col-lg-3">
                         <div class="card-wrapper text-center">
                             <span class="card-route" target="_blank" href="pens/RotateClockCssOnlyNowJS/index.html">
 
@@ -243,7 +243,7 @@
                                 </div>
                             </span>
                         </div>
-                    </div>
+                    </div> -->
 
 
 
@@ -329,7 +329,7 @@
                         <div data-tilt class="card-wrapper text-center">
                             <a class="card-route" target="_blank" href="pens/3dCube/index.html">
                                 <img class="card-image" width="35%" height="35%" src="logo.png" alt="logo" />
-                                <h4 class="card-text">3D Cube</h4>
+                                <h4 class="card-text">3D Cube Rotating</h4>
                                 <div class="text-center mt-3" data-tilt>
                                     <a class="inner-route" target="_blank" aria-label="Demo"
                                         href="pens/3dCube/index.html">Demo</a>
@@ -364,7 +364,7 @@
                         <div data-tilt class="card-wrapper text-center">
                             <a class="card-route" target="_blank" href="pens/Css3dCubes/index.html">
                                 <img class="card-image" width="35%" height="35%" src="logo.png" alt="logo" />
-                                <h4 class="card-text">3D CUBES</h4>
+                                <h4 class="card-text">3D Tripple Cubes</h4>
                                 <div class="text-center mt-3" data-tilt>
                                     <a class="inner-route" target="_blank" aria-label="Demo"
                                         href="pens/Css3dCubes/index.html">Demo</a>
@@ -381,7 +381,7 @@
                         <div data-tilt class="card-wrapper text-center">
                             <a class="card-route" target="_blank" href="pens/3dIconHover/index.html">
                                 <img class="card-image" width="35%" height="35%" src="logo.png" alt="logo" />
-                                <h4 class="card-text">3D Icon Hover</h4>
+                                <h4 class="card-text">3D Icon Hover With Feedback</h4>
                                 <div class="text-center mt-3" data-tilt>
                                     <a class="inner-route" target="_blank" aria-label="Demo"
                                         href="pens/3dIconHover/index.html">Demo</a>
@@ -399,7 +399,7 @@
                         <div data-tilt class="card-wrapper text-center">
                             <a class="card-route" target="_blank" href="pens/CardOpening/index.html">
                                 <img class="card-image" width="35%" height="35%" src="logo.png" alt="logo" />
-                                <h4 class="card-text">3D Icon Hover</h4>
+                                <h4 class="card-text">Card Opening</h4>
                                 <div class="text-center mt-3" data-tilt>
                                     <a class="inner-route" target="_blank" aria-label="Demo"
                                         href="pens/CardOpening/index.html">Demo</a>
@@ -588,7 +588,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-3 col-sm-12 col-lg-3">
+                    <!-- <div class="col-md-3 col-sm-12 col-lg-3">
                         <div data-tilt class="card-wrapper text-center">
                             <a class="card-route" target="_blank" href="pens/CarouselImageGallery/index.html">
                                 <img class="card-image" width="35%" height="35%" src="logo.png" alt="logo" />
@@ -603,7 +603,7 @@
                                 </div>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class="col-md-3 col-sm-12 col-lg-3">
                         <div data-tilt class="card-wrapper text-center">
