--- a/pens/ErrorPage/index.html
+++ b/pens/ErrorPage/index.html
@@ -12,8 +12,18 @@
 <div class="terminal">
   <h1>Error <span class="errorcode">404</span></h1>
   <p class="output">The page you are looking for might have been removed, had its name changed or is temporarily unavailable.</p>
-  <p class="output">Please try to <a href="#1">go back</a> or <a href="#2">return to the homepage</a>.</p>
+  <p class="output">Please try to <a href="#" id="goBack">go back</a> or <a href="../../index.html">return to the homepage</a>.</p>
   <p class="output">Good luck.</p>
 </div>
+
+<script>
+        const goBackLink = document.getElementById('goBack');
+
+        goBackLink.addEventListener('click', function(event) {
+            event.preventDefault(); 
+            // window.history.back();
+            window.close();
+        });
+</script>
 </body>
 </html>
