--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         content="🔥 Unleash the potential of CodePen. Explore a collection of inspiring CodePens from talented creators! #CodePen 💻">
     <meta name="twitter:image" content="https://umair-ali-bhutto.github.io/assets/CodePenIcon/logo.png">
 
-    <meta name="keywords"
-        content="CodePen, HTML, CSS, JavaScript, Web Development, Umair Ali, Interactive Demos, Creative Coding, Collections, Authors, DawidKrajewski, Alencoder_75, arturs, ania221b, argyleink, chasekaiser, Codepixl, cassidoo, coding, dobro123, Dillo, ecemgo, himalayasingh, jkantner, jessejburton, mallendeo, neilcarpenter, Profesor08, petebarr, rabinlc, robinselmer, Skagoo, sandil, YusukeNakaya, ">
+    <!-- <meta name="keywords"
+        content="CodePen, HTML, CSS, JavaScript, Web Development, Umair Ali, Interactive Demos, Creative Coding, Collections, Authors, DawidKrajewski, Alencoder_75, arturs, ania221b, argyleink, chasekaiser, Codepixl, cassidoo, coding, dobro123, Dillo, ecemgo, himalayasingh, jkantner, jessejburton, mallendeo, neilcarpenter, Profesor08, petebarr, rabinlc, robinselmer, Skagoo, sandil, YusukeNakaya, "> -->
 
     <meta name="theme-color" content="#ffffff">
     <meta name="application-name" content="Code Pen" />
@@ -58,7 +58,7 @@
 
                     <!-- Trying videos -->
 
-                    <!-- <style>
+                    <style>
                         @keyframes falling {
                             0% {
                                 transform: translateY(0);
@@ -72,6 +72,7 @@
 
                         .video-container {
                             position: relative;
+                            margin-bottom: 10px;
                         }
 
                         .overlay {
@@ -85,38 +86,84 @@
                             /* Allow clicks to go through the overlay */
                         }
 
+                        video {
+                            width: 100%;
+                            height: 100%;
+                            object-fit: cover;
+                            border-radius: 10px;
+                        }
+
                         .screenshot {
                             width: 100%;
                             height: 100%;
                             object-fit: cover;
+                            border-radius: 10px;
                             transition: opacity 0.5s ease;
                         }
-                    </style> -->
+                    </style>
 
-                    <!-- <script>
-                        function startAnimation() {
-                            const overlay = document.getElementById("overlay");
-                            const video = document.getElementById("video");
+                    <script>
+                        function startAnimation(containerId) {
+                            const container = document.getElementById(containerId);
 
-                            overlay.style.animation = "falling 2s forwards";
-                            video.play();
+                            if (container) {
+                                const overlay = container.querySelector('.overlay');
+                                const video = container.querySelector('video');
 
-                            overlay.addEventListener("animationend", function () {
-                                overlay.style.display = "none";
-                                video.controls = true;
-                            });
+                                if (overlay && video) {
+                                    overlay.style.animation = 'falling 1.5s forwards';
+                                    video.play();
+
+                                    overlay.addEventListener('animationend', function () {
+                                        overlay.style.display = 'none';
+                                        video.controls = true;
+                                    });
+                                }
+                            }
+
                         }
+                    </script>
 
-
-                    </script> -->
-
-                    <!-- <div class="col-md-3 col-sm-12 col-lg-3">
+                    <div class="col-md-3 col-sm-12 col-lg-3">
                         <div class="card-wrapper text-center">
                             <span class="card-route" target="_blank" href="pens/RotateClockCssOnlyNowJS/index.html">
 
-                                <div class="video-container" onmouseover="startAnimation()">
+                                <div id="videoContainer1" class="video-container"
+                                    onmouseover="startAnimation('videoContainer1')">
                                     <div class="overlay" id="overlay">
-                                        <img src="logo.png" alt="Screenshot" class="screenshot">
+                                        <img src="https://miro.medium.com/v2/resize:fit:1400/1*xjl3U-PlELfH8i2IlfwLJA.jpeg"
+                                            alt="Screenshot" class="screenshot">
+                                    </div>
+                                    <video muted loop id="video">
+                                        <source
+                                            src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+                                            type="video/mp4">
+                                        Your browser does not support the video tag.
+                                    </video>
+                                </div>
+
+                                <h4 class="card-text">TEST VIDEO</h4>
+                                <div data-tilt class="text-center mt-3" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Demo"
+                                        href="pens/RotateClockCssOnlyNowJS/index.html">Demo</a>
+                                </div>
+                                <div data-tilt class="text-center mt-3 mb-3" data-tilt>
+                                    <a class="inner-route2" target="_blank" aria-label="Created By"
+                                        href="https://codepen.io/DawidKrajewski">Visit Creator</a>
+                                </div>
+                            </span>
+                        </div>
+                    </div>
+
+                    <div class="col-md-3 col-sm-12 col-lg-3">
+                        <div class="card-wrapper text-center">
+                            <span class="card-route" target="_blank" href="pens/RotateClockCssOnlyNowJS/index.html">
+
+                                <div id="videoContainer2" class="video-container"
+                                    onmouseover="startAnimation('videoContainer2')">
+                                    <div class="overlay" id="overlay">
+                                        <img src="https://pbblogassets.s3.amazonaws.com/uploads/2019/10/14155914/aspectRatioEvolution_lauterbrunnen-1-1.jpg"
+                                            alt="Screenshot" class="screenshot">
                                     </div>
                                     <video muted loop id="video">
                                         <source
@@ -145,104 +192,30 @@
 
 
 
-                    <div class="col-md-3 col-sm-12 col-lg-3">
-                        <div class="card-wrapper text-center">
-                            <span class="card-route" target="_blank" href="pens/RotateClockCssOnlyNowJS/index.html">
-
-                                <video controls autoplay muted loop>
-                                    <source
-                                        src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
-                                        type="video/mp4">
-                                    Your browser does not support the video tag.
-                                </video>
-
-                                <h4 class="card-text">Rotate Clock CSS Only Now JS</h4>
-                                <div data-tilt class="text-center mt-3" data-tilt>
-                                    <a class="inner-route" target="_blank" aria-label="Demo"
-                                        href="pens/RotateClockCssOnlyNowJS/index.html">Demo</a>
-                                </div>
-                                <div data-tilt class="text-center mt-3 mb-3" data-tilt>
-                                    <a class="inner-route2" target="_blank" aria-label="Created By"
-                                        href="https://codepen.io/DawidKrajewski">Visit Creator</a>
-                                </div>
-                            </span>
-                        </div>
-                    </div>
 
 
-                    <div class="col-md-3 col-sm-12 col-lg-3">
-                        <div class="card-wrapper text-center">
-                            <span class="card-route" target="_blank" href="pens/RotateClockCssOnlyNowJS/index.html">
-
-                                <video controls autoplay muted loop>
-                                    <source
-                                        src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
-                                        type="video/mp4">
-                                    Your browser does not support the video tag.
-                                </video>
-
-                                <h4 class="card-text">Rotate Clock CSS Only Now JS</h4>
-                                <div data-tilt class="text-center mt-3" data-tilt>
-                                    <a class="inner-route" target="_blank" aria-label="Demo"
-                                        href="pens/RotateClockCssOnlyNowJS/index.html">Demo</a>
-                                </div>
-                                <div data-tilt class="text-center mt-3 mb-3" data-tilt>
-                                    <a class="inner-route2" target="_blank" aria-label="Created By"
-                                        href="https://codepen.io/DawidKrajewski">Visit Creator</a>
-                                </div>
-                            </span>
-                        </div>
-                    </div>
 
 
-                    <div class="col-md-3 col-sm-12 col-lg-3">
-                        <div class="card-wrapper text-center">
-                            <span class="card-route" target="_blank" href="pens/RotateClockCssOnlyNowJS/index.html">
-
-                                <video controls loop>
-                                    <source
-                                        src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
-                                        type="video/mp4">
-                                    Your browser does not support the video tag.
-                                </video>
-
-                                <h4 class="card-text">Rotate Clock CSS Only Now JS</h4>
-                                <div data-tilt class="text-center mt-3" data-tilt>
-                                    <a class="inner-route" target="_blank" aria-label="Demo"
-                                        href="pens/RotateClockCssOnlyNowJS/index.html">Demo</a>
-                                </div>
-                                <div data-tilt class="text-center mt-3 mb-3" data-tilt>
-                                    <a class="inner-route2" target="_blank" aria-label="Created By"
-                                        href="https://codepen.io/DawidKrajewski">Visit Creator</a>
-                                </div>
-                            </span>
-                        </div>
-                    </div>
 
 
-                    <div class="col-md-3 col-sm-12 col-lg-3">
-                        <div class="card-wrapper text-center">
-                            <span class="card-route" target="_blank" href="pens/RotateClockCssOnlyNowJS/index.html">
 
-                                <video controls loop>
-                                    <source
-                                        src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
-                                        type="video/mp4">
-                                    Your browser does not support the video tag.
-                                </video>
 
-                                <h4 class="card-text">Rotate Clock CSS Only Now JS</h4>
-                                <div data-tilt class="text-center mt-3" data-tilt>
-                                    <a class="inner-route" target="_blank" aria-label="Demo"
-                                        href="pens/RotateClockCssOnlyNowJS/index.html">Demo</a>
-                                </div>
-                                <div data-tilt class="text-center mt-3 mb-3" data-tilt>
-                                    <a class="inner-route2" target="_blank" aria-label="Created By"
-                                        href="https://codepen.io/DawidKrajewski">Visit Creator</a>
-                                </div>
-                            </span>
-                        </div>
-                    </div> -->
+
+
+
+
+
+
+
+
+
+
+
+
+                    
+
+
+
 
 
 
@@ -765,7 +738,22 @@
 
 
 
-
+                    <div class="col-md-3 col-sm-12 col-lg-3">
+                        <div data-tilt class="card-wrapper text-center">
+                            <a class="card-route" target="_blank" href="pens/DroppyWoppyInput/index.html">
+                                <img class="card-image" width="35%" height="35%" src="logo.png" alt="logo" />
+                                <h4 class="card-text">Droppy Woppy Input</h4>
+                                <div class="text-center mt-3" data-tilt>
+                                    <a class="inner-route" target="_blank" aria-label="Demo"
+                                        href="pens/DroppyWoppyInput/index.html">Demo</a>
+                                </div>
+                                <div class="text-center mt-3 mb-3" data-tilt>
+                                    <a class="inner-route2" target="_blank" aria-label="Created By"
+                                        href="https://codepen.io/ste-vg">Visit Creator</a>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
 
 
 
